--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "solid-start dev",
     "build": "solid-start build",
     "start": "solid-start start",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "type": "module",
   "devDependencies": {
